<resources>
    <string name="app_name">Plaplix Productos</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="dd">DD</string>
    <string name="titulo">Titulo</string>
    <string name="precio">Precio</string>
    <string name="productos_disponibles">Productos Disponibles</string>
    <string name="prd">Prd</string>
    <string name="volver">Volver</string>
    <string name="decripcion">decripcion</string>
    <string name="precio_anterior">Precio Anterior</string>
    <string name="credito">Credito</string>
    <string name="textview">TextView</string>
    <string name="nombre">Nombre</string>
    <string name="detal">detal</string>
    <string name="Consulta">TextView</string>
    <string name="text_mail">Nombre</string>

</resources>